# C-Mixup

./: main.py  main.sh  pyproject.toml
cmix/: algorithm.py  config.py  data_generate.py  mix.py  models.py  utils.py
cmix/data/: demo_dataset.py
tests/: test_demo_dataset.py
