[project]
name = "cmix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]

[project.optional-dependencies]
wilds = [
    "wilds>=2.0.0",
]
