[project]
name = "cmix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tyro>=0.9.26",
]

[project.optional-dependencies]
wilds = [
    "wilds>=2.0.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
]
ignore = [
  "F841",  # assigned but unused variable
  "F821",  # undefined name
  "E731",  # do not assign lambda
  "E722",  # do not use bare except
  "E402",  # module import not at top of file
  "E501",  # line too long
]


[tool.ruff.lint.isort]
# force-single-line = true
force-sort-within-sections = true
