[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flax>=0.10.6",
    "jax[cuda12]>=0.5.3",
    "jaxlib>=0.5.3",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "rich>=14.0.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tyro>=0.9.26",
]

[project.optional-dependencies]
wilds = [
    "wilds>=2.0.0",
]
dev = [
    "pytest>=8.4.1",
]

[tool.ruff]
line-length = 120

[tool.setuptools]
packages = ["cmix"]


[tool.ruff.lint]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
]
ignore = [
  "F841",  # assigned but unused variable
  "F821",  # undefined name
  "E731",  # do not assign lambda
  "E722",  # do not use bare except
  "E402",  # module import not at top of file
  "E501",  # line too long
]


[tool.ruff.lint.isort]
# force-single-line = true
force-sort-within-sections = true
